--- a/font.css
+++ b/font.css
@@ -1,9 +1,9 @@
-.ull{
-    font-size:35pt;
+.ul1{
+    font-size 35pt;
 }
-.u12{
+.ul2{
     color: red;
 }
-.u13{
+.ul3{
     text-decoration: line-through;
 }
